# sonelle

./: .dev-tui.json  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-candidate.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.css  index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/linux/: Sonelle.desktop
apps/desktop/src-tauri/src/: audio.rs  book_open_request.rs  commands.rs  epub_import.rs  error_log.rs  kokoro_manifest.rs  kokoro_narration.rs  kokoro_text.rs  lib.rs  library_migration.rs  main.rs  narration_engine_pack.rs  narration_manifest.rs  narration_wav.rs  storage.rs  supertonic_narration.rs  text.rs  voice_installation.rs
apps/desktop/src-tauri/src/storage/: event_journal.rs
apps/desktop/src/audio/: audio-settings-repository.test.ts  audio-settings-repository.ts  html-audio-player.test.ts  html-audio-player.ts  html-manifest-narration-player.test.ts  html-manifest-narration-player.ts  narration-repository.ts  voice-installation-repository.test.ts  (+1 more)
docs/: architecture-principles.md  design-direction.md  development.md  product-direction.md  quality-system.md  roadmap.md
docs/decisions/: 0001-sentence-highlighting.md  0002-reader-first-desktop-layout.md  0003-application-base.md  0004-local-narration.md  0005-word-dictionary-lookup.md  0006-library-power-tools.md  0007-chapter-navigation.md  0008-epub-import-hardening.md  0010-active-chapter-reader-payload.md  0012-native-performance-boundaries.md  0015-in-app-voice-installation.md  0016-hybrid-local-narration.md  0018-kokoro-native-runtime-boundary.md  0019-kokoro-english-g2p-boundary.md  0021-local-kokoro-engine-catalog.md  0023-local-error-diagnostics.md  0024-paragraph-images.md  0025-desktop-epub-open-requests.md
docs/modules/: narration.md  reader-applications.md
docs/plans/: kokoro-supertonic-narration.md
docs/qa/: hybrid-narration-local-qa-2026-07-14.md  narration-runtime-spike.md  real-book-qa-2026-07-07.md  release-readiness.md
marketing/sonelle-promo-video/: README.md  package-lock.json  package.json
marketing/sonelle-promo-video/src/: Root.tsx  SonelleProductFilm.tsx
scripts/: dev-stop.mjs  dev-tui.mjs  prepare-release-version.mjs  release-candidate-workflow.test.ts  run-narration-provider-smoke.mjs  run-narration-provider-smoke.test.ts  setup-kokoro-reference.mjs  setup-kokoro-reference.test.ts  setup-narration-spike.mjs  setup-narration-spike.test.ts  setup-piper-voice.mjs  setup-piper-voice.test.ts  stage-windows-voice-runtime.ps1
tools/narration-spike/: alignment-corpus.json  alignment-corpus.test.ts  engines.json  kokoro_reference.py
(+39 files in other folders)
