[package]
name = "sonelle"
version = "0.1.0"
description = "Sonelle desktop shell"
authors = ["Meschack"]
edition = "2021"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonelle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
flate2 = "1"
roxmltree = "0.21.1"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
sha2 = "0.11.0"
tar = "0.4"
ureq = "3.3.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
