[package]
name = "sonelle"
version = "0.1.0"
description = "Sonelle desktop shell"
authors = ["Meschack"]
edition = "2021"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonelle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
flate2 = "1"
fontdb = "=0.23.0"
grapheme_to_phoneme = "=0.1.0"
anyhow = "=1.0.104"
hound = "=3.5.1"
ndarray = { version = "=0.17.2", features = ["rayon"] }
ort = "=2.0.0-rc.12"
rand = "=0.10.2"
rand_distr = "=0.6.0"
regex = "=1.13.1"
roxmltree = "0.21.1"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
sha2 = "0.11.0"
tar = "0.4"
unicode-normalization = "=0.1.25"
ureq = "3.3.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
misaki-rs = { version = "=0.3.0", default-features = false }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
